@@ -57,3 +57,5 @@ test_doc.vkn
 google_trace.json
 
 build/*
+
+*google_trace*
