@@ -3,7 +3,7 @@
 ///
 // Build config stuff
 
-#define INITIAL_PROGRAM_MEMORY_SIZE MB(8)
+#define INITIAL_PROGRAM_MEMORY_SIZE MB(5)
 
 // You might want to increase this if you get a log warning saying the temporary storage was overflown.
 // In many cases, overflowing the temporary storage should be fine since it just wraps back around and
