@@ -50,7 +50,7 @@ Allocator get_initialization_allocator() {
 // We could fix it by merging free nodes every now and then
 // BUT: We aren't really supposed to allocate/deallocate directly on the heap too much anyways...
 
-#define MAX_HEAP_BLOCK_SIZE ((MB(500)+os.page_size)& ~(os.page_size-1))
+#define MAX_HEAP_BLOCK_SIZE align_next(MB(500), os.page_size)
 #define DEFAULT_HEAP_BLOCK_SIZE (min(MAX_HEAP_BLOCK_SIZE, program_memory_capacity))
 #define HEAP_ALIGNMENT (sizeof(Heap_Free_Node))
 typedef struct Heap_Free_Node Heap_Free_Node;
@@ -217,14 +217,13 @@ Heap_Block *make_heap_block(Heap_Block *parent, u64 size) {
 
 	size += sizeof(Heap_Block);
 
-	size = (size+os.page_size) & ~(os.page_size-1);	
+	size = align_next(size, os.page_size);
 
 	Heap_Block *block = (Heap_Block*)os_reserve_next_memory_pages(size);
 		
 	assert((u64)block % os.page_size == 0, "Heap block not aligned to page size");
 	
 	if (parent) parent->next = block;
-	
 	os_unlock_program_memory_pages(block, size);
 	
 #if CONFIGURATION == DEBUG
@@ -249,8 +248,6 @@ void heap_init() {
 	heap_head = make_heap_block(0, DEFAULT_HEAP_BLOCK_SIZE);
 	spinlock_init(&heap_lock);
 }
-
-
 
 void *heap_alloc(u64 size) {
 
@@ -332,13 +329,33 @@ void *heap_alloc(u64 size) {
 	
 	assert(best_fit != 0, "Internal heap error");
 	
+	// Unlock best fit
+	
+	// #Copypaste
+	void *free_tail = (u8*)best_fit + best_fit->size;
+	void *first_page = (void*)align_previous(best_fit, os.page_size);
+	void *last_page_end = (void*)align_previous(free_tail, os.page_size);
+	if ((u8*)last_page_end > (u8*)first_page) {
+		os_unlock_program_memory_pages(first_page, (u64)last_page_end-(u64)first_page);
+	}
+	
 	Heap_Free_Node *new_free_node = 0;
 	if (size != best_fit->size) {
 		u64 remainder = best_fit->size - size;
 		new_free_node = (Heap_Free_Node*)(((u8*)best_fit)+size);
 		new_free_node->size = remainder;
 		new_free_node->next = best_fit->next;
+		
+		// Lock remaining free node
+		// #Copypaste
+		void *free_tail = (u8*)new_free_node + new_free_node->size;
+		void *next_page = (void*)align_next(new_free_node, os.page_size);
+		void *last_page_end = (void*)align_previous(free_tail, os.page_size);
+		if ((u8*)last_page_end > (u8*)next_page) {
+			os_lock_program_memory_pages(next_page, (u64)last_page_end-(u64)next_page);
+		}
 	}
+	
 	
 	if (previous && new_free_node) {
 		assert(previous->next == best_fit, "Internal heap error");
@@ -407,6 +424,14 @@ void heap_dealloc(void *p) {
 	new_node->size = size;
 	
 	if (new_node < block->free_head) {
+		// #Copypaste
+		void *free_tail = (u8*)new_node + new_node->size;
+		void *next_page = (void*)align_next(new_node, os.page_size);
+		void *last_page_end = (void*)align_previous(free_tail, os.page_size);
+		if ((u8*)last_page_end > (u8*)next_page) {
+			os_lock_program_memory_pages(next_page, (u64)last_page_end-(u64)next_page);
+		}
+		
 		if ((u8*)new_node+size == (u8*)block->free_head) {
 			new_node->size = size + block->free_head->size;
 			new_node->next = block->free_head->next;
@@ -415,11 +440,21 @@ void heap_dealloc(void *p) {
 			new_node->next = block->free_head;
 			block->free_head = new_node;
 		}
+		
 	} else {
 	
 		if (!block->free_head) {
 			block->free_head = new_node;
 			new_node->next = 0;
+			
+			// #Copypaste
+			void *free_tail = (u8*)new_node + new_node->size;
+			void *next_page = (void*)align_next(new_node, os.page_size);
+			void *last_page_end = (void*)align_previous(free_tail, os.page_size);
+			if ((u8*)last_page_end > (u8*)next_page) {
+				os_lock_program_memory_pages(next_page, (u64)last_page_end-(u64)next_page);
+			}
+			
 		} else {
 			Heap_Free_Node *node = block->free_head;
 		
@@ -437,7 +472,25 @@ void heap_dealloc(void *p) {
 				if (new_node >= node) {
 					u8* node_tail = (u8*)node + node->size;
 					if (cast(u8*)new_node == node_tail) {
-						node->size += new_node->size;
+						
+						void *left_node_tail = (u8*)node+node->size;
+						
+						// We need to account for the cases where we coalesce free blocks with start/end in the middle
+						// of a page.
+						
+						// new_node->size will be locked but we need node->size += new_node->size;
+						u64 new_node_size = new_node->size;
+						
+						// #Copypaste
+						void *free_tail = (u8*)new_node + new_node->size;
+						void *next_page = (void*)align_previous(left_node_tail, os.page_size);
+						void *last_page_end = (void*)align_previous(free_tail, os.page_size);
+						if ((u8*)last_page_end > (u8*)next_page) {
+							os_lock_program_memory_pages(next_page, (u64)last_page_end-(u64)next_page);
+						}
+						
+						node->size += new_node_size;
+						
 						break;
 					} else {
 						new_node->next = node->next;
@@ -448,6 +501,15 @@ void heap_dealloc(void *p) {
 							new_node->size += new_node->next->size;
 							new_node->next = new_node->next->next;
 						}
+						
+						// #Copypaste
+						void *free_tail = (u8*)new_node + new_node->size;
+						void *next_page = (void*)align_next(new_node, os.page_size);
+						void *last_page_end = (void*)align_previous(free_tail, os.page_size);
+						if ((u8*)last_page_end > (u8*)next_page) {
+							os_lock_program_memory_pages(next_page, (u64)last_page_end-(u64)next_page);
+						}
+						
 						break;
 					}
 				}
